--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://floppydoval.github.io/languageGO",
   "scripts": {
     "start": "vite",
+    "dev": "vite",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "vitest run",
     "test:e2e": "playwright test",
@@ -13,7 +14,7 @@
     "serve": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },  
+  },
   "dependencies": {
     "@clerk/clerk-react": "^5.17.1",
     "@clerk/testing": "^1.3.22",
