--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://floppydoval.github.io/languageGO",
   "scripts": {
     "start": "vite",
-    "dev": "vite",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "vitest run",
     "test:e2e": "playwright test",
     "build": "vite build",
-    "serve": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.17.1",
@@ -50,7 +46,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
-    "gh-pages": "^6.2.0",
     "playwright": "^1.39.0",
     "sass": "^1.81.0",
     "typescript": "^4.9.3",
